THEG-4 설계문서 README 업데이트

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Levels/Lobby.Lobby
+EditorStartupMap=/Game/Levels/Lobby.Lobby
 GlobalDefaultGameMode="/Script/TheGeniusPlan.TheGeniusPlanGameMode"
 
 [/Script/Engine.RendererSettings]
