삭제되지 않은 Level 제거

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Lobby.Lobby
-EditorStartupMap=/Game/Levels/Lobby.Lobby
+GameDefaultMap=/Game/Levels/LobbyLevel.LobbyLevel
+EditorStartupMap=/Game/Levels/LobbyLevel.LobbyLevel
 GlobalDefaultGameMode="/Script/TheGeniusPlan.TheGeniusPlanGameMode"
 
 [/Script/Engine.RendererSettings]
