Dedicated 용 서버타겟, Client용 타겟 추가

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/LobbyLevel.LobbyLevel
-EditorStartupMap=/Game/Levels/LobbyLevel.LobbyLevel
+GameDefaultMap=/Game/Levels/EntryLevel.EntryLevel
+EditorStartupMap=/Game/Levels/EntryLevel.EntryLevel
 GlobalDefaultGameMode="/Script/TheGeniusPlan.TheGeniusPlanGameMode"
+ServerDefaultMap=/Game/Levels/LobbyLevel.LobbyLevel
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
