THEG-34 플레이어 점수 GameInstance에 반영하는 작업 진행 중(서버트래블을 해도 저장될 수 있도록)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@ GameDefaultMap=/Game/Levels/EntryLevel.EntryLevel
 EditorStartupMap=/Game/Levels/EntryLevel.EntryLevel
 GlobalDefaultGameMode="/Script/TheGeniusPlan.TheGeniusPlanGameMode"
 ServerDefaultMap=/Game/Levels/LobbyLevel.LobbyLevel
+GameInstanceClass=/Script/Engine.GameInstance
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
