로그인/회원가입 API 테스트 완료

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/LobbyLevel.LobbyLevel
-EditorStartupMap=/Game/Levels/LobbyLevel.LobbyLevel
+GameDefaultMap=/Game/Levels/EntryLevel.EntryLevel
+EditorStartupMap=/Game/Levels/EntryLevel.EntryLevel
 GlobalDefaultGameMode="/Script/TheGeniusPlan.TheGeniusPlanGameMode"
 GameInstanceClass=/Script/TheGeniusPlan.GeniusGameInstance
 
