THEG-42 로그인/회원가입 연동 완료

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,3 +1,6 @@
+[Environment]
+API_SERVER_URL=http://34.41.211.121:3000
+
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/EntryLevel.EntryLevel
 EditorStartupMap=/Game/Levels/EntryLevel.EntryLevel
