THEG-45 데디케이트 서버 연동 작업 및 데디케이트 엔진버전 일치 테스트

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,8 +4,10 @@ API_SERVER_URL=http://34.41.211.121:3000
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/EntryLevel.EntryLevel
 EditorStartupMap=/Game/Levels/EntryLevel.EntryLevel
-GlobalDefaultGameMode="/Script/TheGeniusPlan.TheGeniusPlanGameMode"
+GlobalDefaultGameMode=/Script/TheGeniusPlan.LobbyGameMode
 GameInstanceClass=/Script/TheGeniusPlan.GeniusGameInstance
+TransitionMap=/Game/Levels/LobbyLevel.LobbyLevel
+ServerDefaultMap=/Game/Levels/LobbyLevel.LobbyLevel
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
